# lector

./: .gitmodules  LECTOR_REBASE.md  README.md  ROADMAP.md  SCOPE.md  USER_GUIDE.md  platformio.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.skills/: SKILL.md
docs/: file-formats.md  sd-card-fonts.md  speed-plan.md  witchhunt-feature-study.md
lib/EpdFont/: EpdFont.cpp  EpdFont.h  EpdFontData.h  EpdFontFamily.cpp  EpdFontFamily.h  SdCardFont.cpp  SdCardFont.h  SdCardFontManager.cpp  SdCardFontManager.h  SdCardFontRegistry.cpp
lib/Epub/: Epub.cpp  Epub.h
lib/FsHelpers/: FsHelpers.cpp  FsHelpers.h
lib/GfxRenderer/: Bitmap.cpp  Bitmap.h  BitmapHelpers.h  FontCacheManager.cpp  FontCacheManager.h  GfxRenderer.cpp  GfxRenderer.h  RefreshIntent.h
lib/InflateReader/: InflateReader.h
lib/JpegToBmpConverter/: JpegToBmpConverter.cpp
lib/KOReaderSync/: ChapterXPathResolver.cpp  KOReaderCredentialStore.cpp  KOReaderCredentialStore.h  KOReaderJsonIO.cpp  KOReaderSyncClient.cpp  KOReaderSyncClient.h  ProgressMapper.cpp
lib/Memory/: Arena.h  BuildScratch.cpp  BuildScratch.h  FixedBuffer.h  GrowthBounds.h  Memory.h
lib/OpdsParser/: OpdsParser.cpp  OpdsParser.h
lib/PngToBmpConverter/: PngToBmpConverter.cpp
lib/Serialization/: BufferedFile.h  PersistableStore.h  Serialization.h  SerializationBounds.h
lib/Utf8/: Utf8.h
lib/Xtc/: Xtc.cpp
lib/ZipFile/: ZipFile.cpp  ZipFile.h
lib/hal/: DisplayRefreshPolicy.cpp  DisplayRefreshPolicy.h  HalClock.cpp  HalClock.h  HalDisplay.cpp  HalDisplay.h  HalGPIO.cpp  HalGPIO.h  HalPowerManager.h  HalStorage.cpp  HalStorage.h
lib/miniz/: library.json
nix/: flake.nix
rust/fshelpers-rs/: Cargo.toml  ffi_parity_test.cpp
rust/fshelpers-rs/include/: fshelpers_rs.h
rust/fshelpers-rs/src/: lib.rs
scripts/: build_rust.py  img_to_pxc.py  patch_wolfssl.py  update_hyphenation.sh
src/: BookRelocation.h  CrossPointSettings.cpp  CrossPointSettings.h  CrossPointState.cpp  CrossPointState.h  FontInstaller.cpp  FontInstaller.h  FontUploadPolicy.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  OpdsServerStore.cpp  OpdsServerStore.h  RecentBooksStore.cpp  RecentBooksStore.h  SdCardFontSystem.cpp  SdCardFontSystem.h  SettingsList.h  UiFont.h  WakeFrameHandoff.cpp  WakeFrameHandoff.h  WifiCredentialStore.cpp  WifiSession.cpp  WifiSession.h  fontIds.h  main.cpp
src/activities/: Activity.cpp  Activity.h  (+3 more)
test/: CMakeLists.txt
test/arena/: ArenaTest.cpp  CMakeLists.txt
test/book_relocation/: BookRelocationTest.cpp  CMakeLists.txt
test/buffered_file/: BufferedFileTest.cpp  CMakeLists.txt  HalStorage.h
test/build_scratch/: BuildScratchTest.cpp  CMakeLists.txt  Logging.h
test/button_response_policy/: ButtonResponsePolicyTest.cpp  CMakeLists.txt
test/display_refresh_policy/: CMakeLists.txt  DisplayRefreshPolicyTest.cpp
test/dither_memory/: CMakeLists.txt  DitherMemoryTest.cpp
test/fixed_buffer/: CMakeLists.txt  FixedBufferTest.cpp
test/font_preview_layout/: CMakeLists.txt  FontPreviewLayoutTest.cpp
test/font_upload_policy/: CMakeLists.txt  FontUploadPolicyTest.cpp
test/hyphenation_eval/: HyphenationEvaluationTest.cpp
test/image_dimension_policy/: CMakeLists.txt  ImageDimensionPolicyTest.cpp
test/image_viewer_patch/: CMakeLists.txt  ImageViewerPatchTest.cpp
test/image_viewer_policy/: CMakeLists.txt  ImageViewerPolicyTest.cpp
test/inflate_stream/: CMakeLists.txt  InflateStreamFixture.h  InflateStreamTest.cpp
test/large_folder_index_policy/: CMakeLists.txt  LargeFolderIndexPolicyTest.cpp
test/large_folder_index_policy/stubs/: WString.h  esp_task_wdt.h
test/layout_heap_gate/: CMakeLists.txt  LayoutHeapGateTest.cpp
test/layout_params/: CMakeLists.txt  LayoutParamsTest.cpp
test/list_window_policy/: CMakeLists.txt  ListWindowPolicyTest.cpp
test/low_memory_render_tier/: CMakeLists.txt  LowMemoryRenderTierTest.cpp
test/make_shared_nothrow/: CMakeLists.txt  MakeSharedNoThrowTest.cpp
test/memory_bounds/: CMakeLists.txt  MemoryBoundsTest.cpp
test/opds_feeds/: CMakeLists.txt  FeedFixtures.h  OpdsFeedsTest.cpp
test/opds_feeds/stubs/: Logging.h  Print.h
test/opds_filename/: CMakeLists.txt  OpdsFilenameTest.cpp
test/orphan_cache_policy/: CMakeLists.txt  OrphanCachePolicyTest.cpp
test/page_packer/: CMakeLists.txt  PagePackerTest.cpp
test/parsed_text_layout/: CMakeLists.txt  GfxRenderer.h  ParsedTextLayoutTest.cpp  esp_heap_caps.h
test/popup_refresh_mode/: CMakeLists.txt  PopupRefreshModeTest.cpp
test/pxc_overlay_timing/: CMakeLists.txt  PxcOverlayTimingTest.cpp
test/pxc_plane_packer/: CMakeLists.txt  PxcPlanePackerTest.cpp
test/quote_text/: CMakeLists.txt  QuoteTextTest.cpp
test/reader_prefs/: CMakeLists.txt  ReaderPrefsTest.cpp
test/reading_stats/: CMakeLists.txt  ReadingStatsTest.cpp
test/refresh_intent/: CMakeLists.txt  RefreshIntentTest.cpp
test/repack_plan/: CMakeLists.txt  RepackPlanTest.cpp
test/serialization_bounds/: CMakeLists.txt  SerializationBoundsTest.cpp
test/serialization_read_result/: CMakeLists.txt  SerializationReadResultTest.cpp
test/sleep_favorite_move/: CMakeLists.txt  SleepFavoriteMoveTest.cpp
test/sleep_index_pick_policy/: CMakeLists.txt  SleepIndexPickPolicyTest.cpp
test/sleep_rotation_policy/: CMakeLists.txt  SleepRotationPolicyTest.cpp
test/stats_dashboard_policy/: CMakeLists.txt  StatsDashboardPolicyTest.cpp
test/statusbar_reflow/: CMakeLists.txt  StatusBarReflowTest.cpp
test/string_utils/: CMakeLists.txt  StringUtilsTest.cpp
test/top_edge_inset/: CMakeLists.txt  TopEdgeInsetTest.cpp
test/visible_entry_map/: CMakeLists.txt  VisibleEntryMapTest.cpp
test/wake_frame_handoff/: CMakeLists.txt  WakeFrameHandoffTest.cpp
test/wallpaper_direct_pick_policy/: CMakeLists.txt  WallpaperDirectPickPolicyTest.cpp
test/wallpaper_rotation_cycle/: CMakeLists.txt  WallpaperRotationCycleTest.cpp
test/web_path/: CMakeLists.txt  WebPathTest.cpp
test/web_path/stubs/: WString.h
test/whole_file_read_gate/: CMakeLists.txt  WholeFileReadGateTest.cpp
test/wrap_key/: CMakeLists.txt  WrapKeyTest.cpp
(+402 files in other folders)
